--- a/styles.css
+++ b/styles.css
@@ -97,9 +97,7 @@ h3 {
 
 .color-palette-container {
     background: none !important;
-    margin: 0 auto;
     align-items: center;
-    /* border: 1px solid #d9d9d9; */
 }
 
 .color-palette-container .icon {
@@ -128,6 +126,7 @@ h3 {
 }
 
 #color-swatch-container {
+    justify-content: center;
     display: flex;
     margin: 0 auto;
     flex-wrap: wrap;
@@ -139,9 +138,16 @@ h3 {
 .color-swatch {
     width: 40px;
     height: 40px;
-    border-radius: 8px;
+    border-radius: 10px;
     border: 1px solid #d8d8d8;
-    margin: 2px;
+    margin: 5px;
+    transition-duration: .1s;
+
+}
+
+.color-swatch:hover {
+    transform-origin: scale(1.7);
+    transition-duration: .1s;
 }
 
 .slider-label .icon {
@@ -154,7 +160,7 @@ h3 {
     input[type='range'] {
         overflow: hidden;
         width: 100%;
-        height: 20px;
+        height: 30px;
         -webkit-appearance: none;
         background: linear-gradient(90deg, #0065FF, #E6D200);
         margin-top: 10px;
@@ -175,8 +181,8 @@ h3 {
     }
 
     input[type='range']::-webkit-slider-thumb {
-        width: 20px;
-        height: 20px;
+        width: 30px;
+        height: 30px;
         -webkit-appearance: none;
         cursor: pointer;
         box-shadow: 500px 0 0 500px;
