--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ h3 {
 }
 
 .nav-pills .nav-item .nav-link {
-    border-radius: 15px !important;
+    border-radius: 20px !important;
     background-color: #F6D4D4;
 }
 
@@ -98,6 +98,7 @@ h3 {
 .color-palette-container {
     background: none !important;
     align-items: center;
+    border: 1px solid #d8d8d8;
 }
 
 .color-palette-container .icon {
@@ -109,24 +110,11 @@ h3 {
     display: flex;
     margin: 0 auto;
     justify-content: center;
-    margin-right: 20px;
+    margin-right: 15px;
 }
 
-.color-icon-with-label div {
-    display: block;
-}
-
-.color-icon-with-label p {
-    font-family: sans-serif;
-    font-weight: lighter;
-    font-size: 14px;
-    text-align: center;
-    padding: 0px !important;
-    margin: 0px !important;
-}
-
-#color-swatch-container {
-    justify-content: center;
+.color-swatch-container {
+    justify-content: flex-start;
     display: flex;
     margin: 0 auto;
     flex-wrap: wrap;
@@ -136,17 +124,19 @@ h3 {
 }
 
 .color-swatch {
-    width: 40px;
-    height: 40px;
+    width: 45px;
+    height: 45px;
     border-radius: 10px;
     border: 1px solid #d8d8d8;
-    margin: 5px;
+    margin: 4px;
     transition-duration: .1s;
 
 }
 
-.color-swatch:hover {
-    transform-origin: scale(1.7);
+.color-swatch:hover,
+.selected-swatch {
+    border: 3px solid #5197ff;
+    box-shadow: 0px 2px 4px #aeaeae;
     transition-duration: .1s;
 }
 
@@ -155,6 +145,50 @@ h3 {
     margin-right: 30px;
 }
 
+.hair {
+    width: 50px !important;
+    height: 50px !important;
+}
+
+.choose-hairstyle-container {
+    margin-top: 15px;
+    text-align: center;
+}
+
+div.btn-group {
+    box-shadow: none;
+    text-align: center;
+    width: inherit;
+    justify-content: center;
+}
+
+div.btn-group div {
+    display: flex;
+    margin-top: 15px;
+    align-items: center;
+    margin: 0 auto;
+}
+
+div.btn-group:hover {
+    box-shadow: none;
+}
+
+div.btn-group label {
+    font-size: 16px;
+    font-weight: 400;
+    background-color: #0065FF;
+    border-radius: 20px !important;
+    margin-left: 15px;
+    margin-right: 15px;
+    text-align: left;
+    text-transform: lowercase !important;
+}
+
+div.btn-group label p, div.btn-group label .icon {
+    margin: 5px;
+}
+
+
 /*Chrome*/
 @media screen and (-webkit-min-device-pixel-ratio:0) {
     input[type='range'] {
@@ -162,7 +196,7 @@ h3 {
         width: 100%;
         height: 30px;
         -webkit-appearance: none;
-        background: linear-gradient(90deg, #0065FF, #E6D200);
+        background: linear-gradient(90deg, #E6DE8A, #0065FF);
         margin-top: 10px;
         border-radius: 20px;
         transition: .5s;
