--- a/styles.css
+++ b/styles.css
@@ -326,8 +326,8 @@ input[type="range"]::-ms-fill-upper {
     margin: 0 auto;
     margin-top: 30px;
     background-color: #fefefe;
-    padding: 15px;
     margin-bottom: 50px;
+    padding: 10px;
 }
 
 .polygon-maker input {
@@ -387,4 +387,39 @@ label, .slider-label {
     padding-bottom: 5px;
     font-weight: 400;
     font-size: 14px;
+}
+
+.add-new-shape-btn-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.polygon-maker .top {
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+    width: 100%;
+    height: 40px;
+    background-color: blue;
+    top: 0;
+    padding: 0px !important;
+    margin: 0px !important;
+   
+}
+
+.polygon-maker .shape-name {
+    padding: 10px !important;
+    margin: 0px !important;
+    color: #fff !important;
+    font-weight: 600 !important;
+    font-size: 24px !important;
+}
+
+.polygon-maker .close {
+    width: 25px;
+    height: 25px;
+    margin: 10px;
+    padding: 0px !important;
+    background-image: url(./icons/close.svg);
 }
